# dbr

./: .agent.md  .gitignore  2025-08-08-Planning_steps.txt  BACKEND_LOGGING_IMPROVEMENTS.md  BACKEND_USER_MANAGEMENT_ENDPOINTS_PLAN.md  BDD_POC.md  CRUSH.md  DBR_OpenAPI_Specification.yml  DBR_SDK_METHODS_OVERVIEW.md  DBR_SDK_REVIEW_AND_BENEFITS.md  DBR_TEST_DATA_AND_CREDENTIALS.md  DEVELOPMENT_HANDOFF_SUMMARY.md  GEMINI.md  README.md  SDK_TESTING_WORKFLOW.md  specification.md  tdd_structure_analysis.md  tmp_rovodev_api_test_runner.py  tmp_rovodev_bdd_test_runner.py  tmp_rovodev_sdk_quickstart.py  tmp_rovodev_sdk_test_basic.py  tmp_rovodev_sdk_test_org.py  tmp_rovodev_seed_data_expansion_plan.md  tmp_rovodev_test_relationships.py  tmp_rovodev_test_runner.py
.crush/: crush.db  crush.db-shm  crush.db-wal
dbr_mvp/: FRONTEND_TESTING_STRATEGY.md  UPDATED_FRONTEND_LAST_UPDATE.md  UPDATED_FRONTEND_PHASES.md  fastapi_mvp_plan.md  mvp_plan_detailed.md  mvp_plan_overview.md
dbr_mvp/backend/: KNOWN_ISSUES.md  README.md  dbr-buffer-management-system-api.json  dbr.db  dbr_seed_data_inspector.py  pyproject.toml
dbr_mvp/backend/src/dbr/: main.py
dbr_mvp/backend/src/dbr/api/: auth.py  collections.py  memberships.py  organizations.py  schedules.py  system.py  users.py  work_items.py
dbr_mvp/backend/src/dbr/core/: database.py  dependencies.py  logging_config.py  middleware.py  permissions.py  scheduling.py  security.py  time_manager.py  time_progression.py
dbr_mvp/backend/src/dbr/models/: base.py  board_config.py  ccr.py  ccr_user_association.py  collection.py  organization.py  organization_membership.py  role.py  schedule.py  user.py  work_item.py  work_item_dependency.py
dbr_mvp/backend/src/dbr/services/: buffer_zone_manager.py  dbr_engine.py
dbr_mvp/backend/tests/: conftest.py  test_dbr_engine.py
dbr_mvp/backend/tests/test_api/: test_auth.py  test_collections.py  test_memberships.py  test_organizations.py  test_schedules.py  test_security_audit.py  test_system.py  test_users.py  test_work_items.py
dbr_mvp/backend/tests/test_core/: test_time_manager.py  test_time_progression.py
dbr_mvp/backend/tests/test_models/: test_base.py  test_ccr.py  test_collection.py  test_membership.py  test_organization.py  test_role.py  test_schedule.py  test_user.py  test_work_item.py  test_work_item_dependencies.py
dbr_mvp/backend/tests/test_services/: test_buffer_zones.py
dbr_mvp/frontend/: BDD_TESTING_STRATEGY.md  BDD_Work_Items.md  CUSTOMTKINTER_TESTING_GUIDE.md  README.md  RENAME_TEMPLATE_APP.md  TESTING_PATTERNS_REFERENCE.md  pyproject.toml  tmp_rovodev_run_all_sdk_tests.py  tmp_rovodev_sdk_test_auth.py  tmp_sdk_health_check.py
dbr_mvp/frontend/src/: main.py
dbr_mvp/frontend/src/app/: main_window.py  menu_bar.py
dbr_mvp/frontend/src/app/components/: base_component.py  stats_display_frame.py
dbr_mvp/frontend/src/app/pages/: page1.py  page2.py
dbr_mvp/frontend/src/frontend/: authentication_ui.py  backend_config_dialog.py  dbr_service.py  exceptions.py  main.py  main_window.py  menu_bar.py  tab_navigation.py
dbr_mvp/frontend/src/frontend/components/: base_component.py  create_user_dialog.py  edit_user_dialog.py  scrollable_canvas_frame.py  stats_display_frame.py
dbr_mvp/frontend/src/frontend/components/widgets/: grid_cell_widget.py
dbr_mvp/frontend/src/frontend/pages/: page1.py  page2.py  user_management_page.py
dbr_mvp/frontend/src/frontend/utils/: event_bus.py
dbr_mvp/frontend/src/utils/: config.py
dbr_mvp/frontend/tests/: conftest.py  test_api_client.py  test_app.py  test_authentication_ui.py  test_dbr_service.py  test_dbr_startup.py  test_main_window.py  test_menu_bar.py  test_role_navigation.py  test_tab_navigation.py  test_user_management.py
dbr_mvp/frontend/tests/test_components/: test_base_component.py  test_stats_display_frame.py
dbr_mvp/frontend/tests/test_components/test_widgets/: test_grid_cell_widget.py
dbr_mvp/frontend/tests/test_frontend/: __init__.py
dbr_mvp/frontend/tests/test_pages/: test_page1.py  test_user_management_page.py
dbr_mvp/frontend/tests/utils/: __init__.py  test_data_manager.py
dbr_mvp/frontend/tests_bdd/: conftest.py
dbr_mvp/frontend/tests_bdd/features/: authentication.feature  collection_management.feature  dbr_scheduling.feature  organization_management.feature  user_management.feature  work_item_management.feature
dbr_mvp/frontend/tests_bdd/step_definitions/: test_authentication_steps.py  test_collection_steps.py  test_dbr_scheduling_steps.py  test_organization_management_steps.py  test_user_management_steps.py  test_work_item_steps.py
dbrsdk-python/: README.md  SpeakEasy-Notes.md  USAGE.md  pyproject.toml
dbrsdk-python/.devcontainer/: setup.sh
dbrsdk-python/.speakeasy/: gen.yaml  out.openapi.yaml  speakeasy-error-modifications-for-health-overlay.yml  speakeasy-error-modifications-overlay.yml  speakeasy-modifications-overlay.yaml  workflow.yaml
dbrsdk-python/docs/errors/: badrequesterror.md  notfounderror.md  ratelimitederror.md  unauthorizederror.md
dbrsdk-python/docs/models/: advancetimeresponse.md  advancetimeunitapiv1systemadvancetimeunitpostrequest.md  boardanalytics.md  collectioncreate.md  collectionresponse.md  collectionstatus.md  collectiontype.md  collectionupdate.md  createmembershipapiv1organizationsorgidmembershipspostrequest.md  dbrapiauthuserinfo.md  dbrapimembershipsuserinfo.md  deletecollectionapiv1collectionscollectioniddeleterequest.md  deletemembershipapiv1organizationsorgidmembershipsuseriddeleterequest.md  deleteorganizationapiv1organizationsorgiddeleterequest.md  deletescheduleapiv1schedulesscheduleiddeleterequest.md  deleteuserapiv1usersuseriddeleterequest.md  deleteworkitemapiv1workitemsworkitemiddeleterequest.md  getboardanalyticsapiv1schedulesboardboardconfigidanalyticsgetrequest.md  getcollectionapiv1collectionscollectionidgetrequest.md  getcollectionsapiv1collectionsgetrequest.md  getorganizationsapiv1organizationsgetrequest.md  (+41 more)
tk-dbr-screen-proto/: main.py  pyproject.toml
tk-template/: README.md  pyproject.toml  tkinter_app_plan.md
tk-template/tests/: test_tab_navigation.py
(+118 files in other folders)
